Set up league controller to make it easy to add other leagues. Added github actions for api contract validations
